# gfi-website

./: .env.example  .gitignore  README.md  clean_output.json  clean_scraped_products.py  pyproject.toml  scrape_gnfchem.py
.github/workflows/: deploy.yml
apps/contact/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
apps/contact/migrations/: 0001_initial.py
apps/news/: admin.py  models.py  tests.py
apps/news/migrations/: 0001_initial.py  0002_alter_post_content_alter_post_is_published.py
apps/pages/: admin.py  context_processors.py  models.py  sitemaps.py  tests.py  views.py
apps/pages/migrations/: 0002_sitesettings_address_sitesettings_map_url.py  0003_sitesettings_facebook_url_sitesettings_instagram_url_and_more.py  0004_sitesettings_map_embed_url.py  0005_heroslide.py
apps/products/: admin.py  models.py  tests.py  urls.py  views.py
apps/products/migrations/: 0001_initial.py  (+2 more)
apps/utils/: images.py  storage.py
config/: urls.py
config/settings/: base.py  development.py  production.py
requirements/: base.txt
static/css/: base.css  main.css  tokens.css
static/js/: hero.js  navbar.js  products.js  ui.js
templates/: 404.html  500.html  base.html  robots.txt
templates/contact/: inquiry.html  success.html
templates/includes/: cta_products.html  footer.html  navbar.html  prefooter.html  social_icons.html  topbar.html
templates/news/: detail.html  list.html
templates/pages/: about.html  home.html  services.html
templates/products/: _product_cards.html  _products_grid.html  category.html  detail.html  list.html  search.html
(+26 files in other folders)
